--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy bird</title>
-    <link rel="stylesheet" href="./flappybird.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="game">
-        <div id="block"></div>
-        <div id="space"></div>
-        <div id="bird"><img src="./Flappy-Bird-Logo-PNG-Clipart.png" alt=""></div>
-    </div>
-     <div id="result">
-        <div id="game_message"><h1 id="h1">Game Over</h1></div>
-        <div class="result_box">
-         
-            <p id="text"></p>
-        </div>
-        <button id="btn" onclick="location.reload()">Play</button>
-     </div>
-<script src="./flappybird.js"></script>
+    <a href="./index.html" target="_self">start</a>
 </body>
 </html>
