--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html" target="_self">start</a>
+    <a href="./flappybird.html" target="_self">start</a>
 </body>
 </html>
