--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <a href="./flappybird.html" target="_self">start</a>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&family=Fredoka:wght@300..700&family=Jaro:opsz@6..72&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background-color: #038696;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 90vh;
+      }
+      button {
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 11px;
+        background-color: green;
+        color: white;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        margin-top: 1rem;
+        cursor: pointer;
+      }
+      h1{
+        font-family: jaro;
+        font-size: 70px;
+        color:#e0d796;
+        text-shadow:5px 2px 0px orangered;
+      }
+      img{
+           height: 300px;
+      }
+    </style>
+  </head>
+  <body>
+   
+  <h1>Flappy bird</h1></div> 
+  <img src="./bird3.gif.crdownload" alt="">
+   <a href="./flappybird.html" target="_self"><button id="btn" >Start</button></a>
+   
+   
+  </body>
 </html>
