--- a/flappybird.html
+++ b/flappybird.html
@@ -14,6 +14,7 @@
         <div id="bird"><img src="./Flappy-Bird-Logo-PNG-Clipart.png" alt=""></div>
     </div>
      <div id="result">
+        <img src="./BiaKrE5aT.png.crdownload" alt="" width="100px">
         <h1 id="game_over">Game Over</h1>
         <div id="result_box">
              
