--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <style>
       body {
-        background-color: #038696;
+        background-image: url(./bg.jpg);
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -39,13 +39,15 @@
       }
       img{
            height: 300px;
+           position: relative;
+           top: -15px;
       }
     </style>
   </head>
   <body>
    
   <h1>Flappy bird</h1></div> 
-  <img src="./bird3.gif.crdownload" alt="">
+  <img src="./bird6.png" alt="">
    <a href="./flappybird.html" target="_self"><button id="btn" >Start</button></a>
    
    
