--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
    
   <h1>Flappy bird</h1></div> 
-  <img src="./bird6.png" alt="">
+  <img src="./bird9.gif.crdownload" alt="">
    <a href="./flappybird.html" target="_self"><button id="btn" >Start</button></a>
    
    
