--- a/flappybird.html
+++ b/flappybird.html
@@ -13,8 +13,8 @@
         <div id="space"></div>
         <div id="bird"><img src="./Flappy-Bird-Logo-PNG-Clipart.png" alt=""></div>
     </div>
-     <div id="result">
-        <img src="./Flappy Birds high res transparent background png animated (3).png.crdownload" alt="" width="100px">
+    <div id="result">
+        <!-- <img src="./Flappy Birds high res transparent background png animated (3).png.crdownload" alt="" width="100px"> -->
         <h1 id="game_over">Game Over</h1>
         <div id="result_box">
              
